--- a/huggingface/pytorch/tei/docker/1.7.0/gpu/Dockerfile
+++ b/huggingface/pytorch/tei/docker/1.7.0/gpu/Dockerfile
@@ -102,6 +102,7 @@ ENV HUGGINGFACE_HUB_CACHE=/opt/ml/model \
 
 RUN apt-get update && apt-get upgrade -y && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     ca-certificates \
+    libsqlite3-0 \
     libssl-dev \
     curl \
     && rm -rf /var/lib/apt/lists/*
